# anomaly-detection-llm

./: .gitignore  Dockerfile  Makefile  README.md  anomaly_detection_llm_plan.md  anomaly_detection_llm_v2_plan.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
api/: main.py  predictor.py  schemas.py
dashboard/: app.py
data/labels/: llm_confirmed.parquet
data/sample/: features.parquet  predictions.parquet  raw_logs.parquet
notebooks/: 01_eda_logs.ipynb  02_feature_engineering.ipynb  03_anomaly_detection.ipynb  04_evaluation.ipynb  05_llm_summarizer.ipynb  06_active_learning.ipynb  07_llm_agent.ipynb  08_drift_detection.ipynb
scripts/: gen_agent_labels.py  gen_cloud_sample.py
src/data/: loader.py  preprocessor.py
src/features/: engineering.py
src/llm/: agent.py  prompts.py  provider.py  summarizer.py
src/models/: active_learner.py  detector.py  evaluator.py
src/monitoring/: drift_detector.py  model_monitor.py
src/streaming/: event_generator.py
tests/: test_active_learner.py  test_agent.py  test_api.py  test_detector.py  test_drift_detector.py  test_evaluator.py  test_event_generator.py  test_features.py  test_model_monitor.py  test_preprocessing.py  test_summarizer.py
