[project]
name = "anomaly-detection-llm"
version = "0.1.0"
description = "IT log anomaly detection with LLM summarizer using BGL dataset"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "duckdb>=0.10",
    "scikit-learn>=1.5",
    "pyod>=2.0",
    "optuna>=3.6",
    "langchain>=0.3",
    "langchain-ollama>=0.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "streamlit>=1.40",
    "matplotlib>=3.9",
    "plotly>=5.22",
    "structlog>=24.0",
    "joblib>=1.4",
    "pyarrow>=16.0",
    "lightgbm>=4.6.0",
    "mlflow>=3.13.0",
    "langchain-community>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.11",
    "pandas-stubs>=2.2",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
